--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
     <Header>
         <nav id="nav">
             <div class="logo"> 
-                <img src="img/logo.png" width="190px">
+                <img src="/img/logo.png" width="190px">
             </div>
             <div class="menu-nav">
                 <ul class="menu-list">
-                    <li><a href="index.html" class="menu-ativo">HOME</a></li>
+                    <li>HOME</li>
                     <li>SIME</li>
-                    <li><a href="preco.html">NOSSOS PREÇOS</a></li>
+                    <li>NOSSOS PREÇOS</li>
                     <li>CONTATO</li>
                 </ul>
             </div>
@@ -51,9 +51,9 @@
 
         </div>
         <div class="contact-icons">
-            <img src="img/IG.png">
-            <img src="img/gmail.png">
-            <img src="img/github.png">
+            <img src="/img/IG.png">
+            <img src="/img/gmail.png">
+            <img src="/img/github.png">
         </div>
     </footer>
     
