--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <Header>
         <nav id="nav">
             <div class="logo"> 
-                <img src="img/logo.png" width="190px">
+                <a href="index.html" class="menu-ativo"><img src="img/logo.png" width="190px"></a>
             </div>
             <div class="menu-nav">
                 <ul class="menu-list">
