:sparkles: Feat: Começar o html e o css.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <Header>
         <nav id="nav">
             <div class="logo"> 
-                <img src="/img/logo.png" width="190px">
+                <img src="img/logo.png" width="190px">
             </div>
             <div class="menu-nav">
                 <ul class="menu-list">
@@ -51,9 +51,9 @@
 
         </div>
         <div class="contact-icons">
-            <img src="/img/IG.png">
-            <img src="/img/gmail.png">
-            <img src="/img/github.png">
+            <img src="img/IG.png">
+            <img src="img/gmail.png">
+            <img src="img/github.png">
         </div>
     </footer>
     
