--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <Header>
         <nav id="nav">
             <div class="logo"> 
-                <img src="img/logo.png" width="190px">
+                <a href="index.html"><img src="img/logo.png" width="190px"></a>
             </div>
             <div class="menu-nav">
                 <ul class="menu-list">
-                    <li>HOME</li>
+                    <li><a href="index.html">HOME</a></li>
                     <li>SIME</li>
                     <li>NOSSOS PREÇOS</li>
                     <li>CONTATO</li>
                 </ul>
             </div>
             <div class="comment">
-                <p>COMENTE</p>
+                 <p><a href="comente.html">COMENTE</p>
             </div>
         </nav>
     </Header>
