:sparkles: Feat: Continuar o css.

--- a/comente.html
+++ b/comente.html
@@ -21,6 +21,7 @@
                 </ul>
             </div>
             <div class="comment">
+                <div class="circulo"></div>
                 <p class="menu-ativo"><a href="comente.html">COMENTE</a></p>
             </div>
             <div class="c1"></div>
@@ -78,6 +79,7 @@
                     <small id="textForm" style="color: #fff; margin-top: 1vh; display: block;"></small>
                     
                     <button class="linear-gradient-btn" type="submit">ENVIAR</button>
+                    <div class="c2"></div>
                 </form>
                 
             </div> 
