:sparkles: Feat: Consetar a logica das setas e melhorar o css deles.

--- a/comente.html
+++ b/comente.html
@@ -74,6 +74,7 @@
                             <li class="star-icon" data-avaliação="5"></li> 
                         </ul>
                         <p class="feedback-text">Seu feedback sobre o SIME</p>
+                        <div class="c3"></div>
                     </div>
                     
                     <small id="textForm" style="color: #fff; margin-top: 1vh; display: block;"></small>
@@ -92,13 +93,25 @@
             <div class="comentarios-existentes" id="comentarios-lista"> 
                 <section class="paginate">
                     <div class="pagination">
-                        <div class="first">&#171;</div>
-                        <div class="prev">&lt;</div>
-                        <div class="numbers">
-                            <div>1</div>
+                        <div class="first">
+                            <div class="c4"></div>
+                            <span>&#171;</span>
                         </div>
-                        <div class="next">&gt;</div>
-                        <div class="last">&#187;</div>
+                        <div class="prev">
+                            <div class="c5"></div>
+                            <span>&lt;</span>
+                        </div>
+                        <div class="numbers">
+                            <div>Página 1</div>
+                        </div>
+                        <div class="next">
+                            <div class="c6"></div>
+                            <span>&gt;</span>
+                        </div>
+                        <div class="last">
+                            <div class="c7"></div>
+                            <span>&#187;</span>
+                        </div>
                     </div>
                 </section>
             </div>
