--- a/preco.html
+++ b/preco.html
@@ -7,32 +7,46 @@
     <link rel="stylesheet" href="css/preco.css">
 </head>
 <body>
-    <header>
-        <nav id="nav">
-            <div class="logo"> 
-                <a href="index.html" class="menu-ativo"><img src="img/logo.png" width="190px"></a>
-            </div>
-            <div class="menu-nav">
-                <ul class="menu-list">
-                    <li><a href="index.html">HOME</a></li>
-                    <li>SIME</li>
-                    <li><a href="preco.html" class="menu-ativo">NOSSOS PREÇOS</a></li>
-                    <span class="dot"></span>
-                    <li>CONTATO</li>
-                </ul>
-            </div>
-            <div class="comment">
-                <p>COMENTE</p>
-            </div>
-            <div class="c1"></div>
-            <div class="c2"></div>
-        </nav>
-    </header>
+<header>
+    <nav id="nav">
+        <div class="hamburger-icon">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <div class="menu-mobile">
+            <ul class="menu-list">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="#">SIME</a></li>
+                <li><a href="preco.html" class="menu-ativo">NOSSOS PREÇOS</a></li>
+                <li><a href="#">CONTATO</a></li>
+            </ul>
+        </div>
+
+        <div class="logo"> 
+            <a href="index.html"><img src="img/logo.png" width="190px"></a>
+        </div>
+        <div class="menu-nav">
+            <ul class="menu-list">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="#">SIME</a></li>
+                <li><a href="preco.html" class="menu-ativo">NOSSOS PREÇOS</a></li>
+                <li><a href="#">CONTATO</a></li>
+            </ul>
+        </div>
+        <div class="comment">
+            <p>COMENTE</p>
+        </div>
+        <div class="c1"></div>
+        <div class="c2"></div>
+    </nav>
+</header>
 
     <main>
         <div class="introduction">
             <ul class="introduction-list">
-                <li class="subtitle">Nossos Preços</li>
+                <li class="subtitle">Nosso Preço</li>
                 <li class="introduction-text">Garanta agora o seu acesso ao SIME e leve a gestão da manutenção<br>
                     escolar a outro nível! Escolha o plano ideal para a sua necessidade e <br>
                     comece hoje mesmo a transformar a organização da sua escola.</li>
@@ -40,62 +54,8 @@
         </div>
 
         <section class="cards-section">
-            <h2>Planos Disponíveis</h2>
+            <h2>Plano Disponível</h2>
             <div class="cards-container">
-                <div class="card">
-                    <div class="imagemdinheiro">
-                        <img src="img/money.png" alt="Ícone de dinheiro">
-                    </div>
-                    <h3 class="card-title">Plano Inicial</h3>
-                    <p class="card-description">Perfeito para começar com o SIME.</p>
-                    <div class="price-container">
-                        <span class="price">R$ 30</span>
-                        <span class="price-per-month">Por mês</span>
-                    </div>
-                    <div class="card-features">
-                        <div class="feature-item">
-                            <img src="img/usuario.png" alt="Ícone de usuário">
-                            <p>Versão desktop disponível</p>
-                        </div>
-                        <div class="feature-item">
-                            <img src="img/usuario.png" alt="Ícone de usuário">
-                            <p>Suporte para até 30 usuários</p>
-                        </div>
-                    </div>
-                    <a href="#" class="buy-button">Comprar</a>
-                </div>
-
-                <div class="card">
-                    <div class="imagemdinheiro">
-                        <img src="img/money.png" alt="Ícone de dinheiro">
-                    </div>
-                    <h3 class="card-title">Plano Completo</h3>
-                    <p class="card-description">Usufrua de tudo que SIME pode oferecer.</p>
-                    <div class="price-container">
-                        <span class="price">R$ 90</span>
-                        <span class="price-per-month">Por mês</span>
-                    </div>
-                    <div class="card-features">
-                        <div class="feature-item">
-                            <img src="img/usuario.png" alt="Ícone de usuário">
-                            <p>Versão desktop disponível</p>
-                        </div>
-                        <div class="feature-item">
-                            <img src="img/usuario.png" alt="Ícone de usuário">
-                            <p>Upload de fotos nas solicitações</p>
-                        </div>
-                        <div class="feature-item">
-                            <img src="img/usuario.png" alt="Ícone de usuário">
-                            <p>Usuários ilimitados</p>
-                        </div>
-                        <div class="feature-item">
-                            <img src="img/usuario.png" alt="Ícone de usuário">
-                            <p>Até 5 administradores</p>
-                        </div>
-                    </div>
-                    <a href="#" class="buy-button">Comprar</a>
-                </div>
-
                 <div class="card">
                     <div class="imagemdinheiro">
                         <img src="img/money.png" alt="Ícone de dinheiro">
