--- a/preco.html
+++ b/preco.html
@@ -37,6 +37,7 @@
         </div>
         <div class="comment">
             <p>COMENTE</p>
+            <div class="circulo"></div>
         </div>
         <div class="c1"></div>
         <div class="c2"></div>
