:sparkles: Feat: Continuar a responsividade e fazer a nav bar do celular.

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <li class="footer-subtitle">SIME</li>
                     <li class="footer-subtitle">Preços</li>
                 </ul>
-                <img src="img/logo.png" width="180px">
+                <img src="img/logo.png" class="logo-footer" width="180px">
 
             </div>
             <div class="contact-icons">
