--- a/preco.html
+++ b/preco.html
@@ -30,11 +30,13 @@
         <img src="img/hamburger.png" class="hamburger-icon" alt="Abrir menu">
 
         <div class="menu-mobile">
+            <img src="img/close.png" class="fechar">
             <ul class="menu-list">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="#">SIME</a></li>
-                <li><a href="preco.html" class="menu-ativo">NOSSOS PREÇOS</a></li>
-                <li><a href="#">CONTATO</a></li>
+                <li><img src="img/home.png"><a href="index.html">HOME</a></li>
+                <li><img src="img/engrenagem.png" class="sime"><a href="#">SIME</a></li>
+                <li><img src="img/dinheiro.png"><a href="preco.html" class="menu-ativo">NOSSOS PREÇOS</a></li>
+                <li><img src="img/phone.png"><a href="#">CONTATO</a></li>
+                <li><img src="img/comente.png"><a href="#">COMENTE</a></li>
             </ul>
         </div>
 
