:sparkles: Feat: Adicionar a lógica do nav bar e fazer a responsividaade com clamp e @media.

--- a/comente.html
+++ b/comente.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COMENTE</title>
+    <title>Comente</title>
     <link rel="stylesheet" href="css/comente.css">
 </head>
 <body>
@@ -25,6 +25,19 @@
                 <p class="menu-ativo"><a href="comente.html">COMENTE</a></p>
             </div>
             <div class="c1"></div>
+            <img src="img/hamburger.png" class="hamburger-icon" alt="Abrir menu">
+
+            <div class="menu-mobile">
+                <img src="img/fechar.png" class="fechar">
+                <ul class="menu-list">
+                    <li><img src="img/home.png"><a href="index.html">HOME</a></li>
+                    <li><img src="img/engrenagem.png" class="sime"><a href="#">SIME</a></li>
+                    <li><img src="img/dinheiro.png"><a href="preco.html" >NOSSOS PREÇOS</a></li>
+                    <li><img src="img/phone.png"><a href="#">CONTATO</a></li>
+                    <li><img src="img/comente.png"><a href="#" class="menu-ativo">COMENTE</a></li>
+                </ul>
+            </div>
+            
         </nav>
     </header>
 
@@ -39,6 +52,12 @@
                     Sua participação faz toda a diferença e nos ajuda a entender melhor<br>
                     suas necessidades. <br>
                     Aqui, sua voz é ouvida — compartilhe suas ideias, dúvidas ou opiniões<br> e enriqueça ainda mais esta conversa.
+                </li>
+
+                <li class="introduction-text-mobile">Gostou do SIME? Deixe seu comentário!
+                    Sua participação faz toda a diferença e nos ajuda a entender melhor
+                    suas necessidades.
+                    Aqui, sua voz é ouvida — compartilhe suas ideias, dúvidas ou opiniões e enriqueça ainda mais esta conversa.
                 </li>
             </ul>
         </div>
@@ -73,8 +92,8 @@
                             <li class="star-icon" data-avaliação="4"></li>
                             <li class="star-icon" data-avaliação="5"></li> 
                         </ul>
-                        <p class="feedback-text">Seu feedback sobre o SIME</p>
                         <div class="c3"></div>
+                        <p class="feedback-text">Seu feedback sobre o SIME</p>
                     </div>
                     
                     <small id="textForm" style="color: #fff; margin-top: 1vh; display: block;"></small>
