--- a/preco.html
+++ b/preco.html
@@ -33,10 +33,10 @@
             <img src="img/close.png" class="fechar">
             <ul class="menu-list">
                 <li><img src="img/home.png"><a href="index.html">HOME</a></li>
-                <li><img src="img/engrenagem.png" class="sime"><a href="#">SIME</a></li>
+                <li><img src="img/engrenagem.png" class="sime"><a href="sime.html">SIME</a></li>
                 <li><img src="img/dinheiro.png"><a href="preco.html" class="menu-ativo">NOSSOS PREÇOS</a></li>
                 <li><img src="img/phone.png"><a href="#">CONTATO</a></li>
-                <li><img src="img/comente.png"><a href="#">COMENTE</a></li>
+                <li><img src="img/comente.png"><a href="comente.html">COMENTE</a></li>
             </ul>
         </div>
 
