:sparkles:  Feat: Começar a página de contato e fazer a responsividade da mesma.

--- a/preco.html
+++ b/preco.html
@@ -16,14 +16,14 @@
         <div class="menu-nav">
             <ul class="menu-list">
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="#">SIME</a></li>
+                <li><a href="sime.html">SIME</a></li>
                 <li><a href="preco.html" class="menu-ativo">NOSSOS PREÇOS</a></li>
-                <li><a href="#">CONTATO</a></li>
+                <li><a href="contato.html">CONTATO</a></li>
             </ul>
         </div>
         
         <div class="comment">
-            <p>COMENTE</p>
+            <p><a href="comente.html">COMENTE</a></p>
             <div class="circulo"></div>
         </div>
         
@@ -33,10 +33,10 @@
             <img src="img/close.png" class="fechar">
             <ul class="menu-list">
                 <li><img src="img/home.png"><a href="index.html">HOME</a></li>
-                <li><img src="img/engrenagem.png" class="sime"><a href="#">SIME</a></li>
-                <li><img src="img/dinheiro.png"><a href="preco.html" class="menu-ativo">NOSSOS PREÇOS</a></li>
-                <li><img src="img/phone.png"><a href="#">CONTATO</a></li>
-                <li><img src="img/comente.png"><a href="#">COMENTE</a></li>
+                    <li><img src="img/engrenagem.png"><a href="sime.html">SIME</a></li>
+                    <li><img src="img/dinheiro.png"><a href="preco.html" class="menu-ativo" >NOSSOS PREÇOS</a></li>
+                    <li><img src="img/phone.png"><a href="contato.html">CONTATO</a></li>
+                    <li><img src="img/comente.png"><a href="comente.html">COMENTE</a></li>
             </ul>
         </div>
 
@@ -52,6 +52,11 @@
                 <li class="introduction-text">Garanta agora o seu acesso ao SIME e leve a gestão da manutenção<br>
                     escolar a outro nível! Escolha o plano ideal para a sua necessidade e <br>
                     comece hoje mesmo a transformar a organização da sua escola.</li>
+
+                <li class="introduction-text-mobile">Garanta agora o seu acesso ao SIME e leve a gestão da manutenção
+                    escolar a outro nível! Escolha o plano ideal para a sua necessidade e 
+                    comece hoje mesmo a transformar a organização da sua escola.
+                </li>
             </ul>
         </div>
 
