--- a/comente.html
+++ b/comente.html
@@ -33,8 +33,8 @@
                     <li><img src="img/home.png"><a href="index.html">HOME</a></li>
                     <li><img src="img/engrenagem.png" class="sime"><a href="#">SIME</a></li>
                     <li><img src="img/dinheiro.png"><a href="preco.html" >NOSSOS PREÇOS</a></li>
-                    <li><img src="img/phone.png"><a href="#">CONTATO</a></li>
-                    <li><img src="img/comente.png"><a href="#" class="menu-ativo">COMENTE</a></li>
+                    <li><img src="img/phone.png"><a href="contato.html">CONTATO</a></li>
+                    <li><img src="img/comente.png"><a href="comente.html" class="menu-ativo">COMENTE</a></li>
                 </ul>
             </div>
             
