:sparkles: Feat: Comentar o c3 da página Comente.

--- a/comente.html
+++ b/comente.html
@@ -92,7 +92,7 @@
                             <li class="star-icon" data-avaliação="4"></li>
                             <li class="star-icon" data-avaliação="5"></li> 
                         </ul>
-                        <div class="c3"></div>
+                        <!--<div class="c3"></div>-->
                         <p class="feedback-text">Seu feedback sobre o SIME</p>
                     </div>
                     
