:sparkles: Feat: Arrumar as paginas de preço, comente e contato para o media de 1920px.

--- a/contato.html
+++ b/contato.html
@@ -122,7 +122,7 @@
                     <a>HELLEN</a>
                 </div>
                 <div class="membro">
-                    <img src="img/gato.jpg" alt="LUCA">
+                    <img src="img/luca.jpeg" alt="LUCA">
                     <a>LUCA</a>
                 </div>
                 <div class="membro">
