--- a/sime.html
+++ b/sime.html
@@ -142,11 +142,11 @@
         <img src="img/tecnologias.png" alt="">
     </div>
 
-    <div class="explanatory-video-container">
+    <!--<div class="explanatory-video-container">
         <p class="explanatory-video-title">Vídeo Explicativo</p>
         <div class="explanatory-video"></div>
         <p class="explanatory-video-comments">Ver comentários -></p>
-    </div>
+    </div>-->
 
     <div class="why-choose-sime-container">
         <p class="why-choose-sime-title">Por que Escolher o SIME</p>
