:sparkles: Feat: Mudar o css e o html.

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     Desde 2025, a NeWo tem se destacado como uma empresa inovadora, com uma visão de mercado clara e voltada para o futuro da tecnologia educacional. Nossa equipe é comprometida, consistente e motivada a desenvolver soluções que realmente fazem a diferença no dia a dia das escolas. Acreditamos na inovação como motor para transformar processos e facilitar rotinas, sempre com foco na qualidade e confiabilidade de nossos sistemas.
                 </p>
                 <div class="comment-cta">
-                    <p class="comment-click">Aperte aqui para ver os comentários.</p>
+                    <p class="comment-click"><a href="comente.html">Aperte aqui para ver os comentários.</a></p>
                     <div class="comment-message-wrapper">
                         <p>Sua opinião importa</p>
                         <div class="separator-line"></div>
